; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-max77686.c_max77686_rtc_update.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-max77686.c_max77686_rtc_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.max77686_rtc_info = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64, i32* }

@MAX77686_RTC_WRITE = common dso_local global i32 0, align 4
@RTC_UDR_SHIFT = common dso_local global i32 0, align 4
@RTC_RBUDR_SHIFT = common dso_local global i32 0, align 4
@REG_RTC_UPDATE0 = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [45 x i8] c"Fail to write update reg(ret=%d, data=0x%x)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.max77686_rtc_info*, i32)* @max77686_rtc_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max77686_rtc_update(%struct.max77686_rtc_info* %0, i32 %1) #0 {
  %3 = alloca %struct.max77686_rtc_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.max77686_rtc_info* %0, %struct.max77686_rtc_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.max77686_rtc_info*, %struct.max77686_rtc_info** %3, align 8
  %9 = getelementptr inbounds %struct.max77686_rtc_info, %struct.max77686_rtc_info* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %7, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @MAX77686_RTC_WRITE, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i32, i32* @RTC_UDR_SHIFT, align 4
  %18 = shl i32 1, %17
  store i32 %18, i32* %6, align 4
  br label %22

19:                                               ; preds = %2
  %20 = load i32, i32* @RTC_RBUDR_SHIFT, align 4
  %21 = shl i32 1, %20
  store i32 %21, i32* %6, align 4
  br label %22

22:                                               ; preds = %19, %16
  %23 = load %struct.max77686_rtc_info*, %struct.max77686_rtc_info** %3, align 8
  %24 = getelementptr inbounds %struct.max77686_rtc_info, %struct.max77686_rtc_info* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.max77686_rtc_info*, %struct.max77686_rtc_info** %3, align 8
  %27 = getelementptr inbounds %struct.max77686_rtc_info, %struct.max77686_rtc_info* %26, i32 0, i32 1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = load i64, i64* @REG_RTC_UPDATE0, align 8
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @regmap_update_bits(i32 %25, i32 %33, i32 %34, i32 %35)
  store i32 %36, i32* %5, align 4
  %37 = load i32, i32* %5, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %46

39:                                               ; preds = %22
  %40 = load %struct.max77686_rtc_info*, %struct.max77686_rtc_info** %3, align 8
  %41 = getelementptr inbounds %struct.max77686_rtc_info, %struct.max77686_rtc_info* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* %5, align 4
  %44 = load i32, i32* %6, align 4
  %45 = call i32 @dev_err(i32 %42, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %43, i32 %44)
  br label %51

46:                                               ; preds = %22
  %47 = load i64, i64* %7, align 8
  %48 = load i64, i64* %7, align 8
  %49 = mul i64 %48, 2
  %50 = call i32 @usleep_range(i64 %47, i64 %49)
  br label %51

51:                                               ; preds = %46, %39
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32, i8*, i32, i32) #1

declare dso_local i32 @usleep_range(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
